# sage-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  TROUBLESHOOTING.md  pyproject.toml
docs/: EVAL.md  blog-draft.md
src/sage_agent/: __init__.py  app.py  cli.py  context.py  graph.py  model.py  prompts.py  state.py  store.py  tools.py
tests/eval/: action_cases.json  action_runner.py  cases.json  rescore.py  runner.py
tests/eval/results/: action_run1_20260531T194542Z.json  action_run2_20260531T194937Z.json  action_run3_20260531T195252Z.json  baseline_20260524T094912Z.json  baseline_20260530T183255Z.json  groundtruth_20260530T184434Z.json  phase1_20260531T071919Z.json  phase4_20260531T194151Z.json  phase4b_run1_20260603T201244Z.json  phase4b_run2_20260603T201731Z.json  phase4b_run3_20260603T202201Z.json  week2_20260524T105957Z.json  week2_retrieval_20260524T104602Z.json  week3_20260524T115043Z.json  week3_20260524T161027Z.json
