[project]
name = "sage-agent"
version = "0.1.0"
description = "A memory-augmented conversational agent extending langchain-ai/memory-agent with semantic retrieval, conflict resolution, typed memory, and an eval-driven improvement story."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Manvendra" }]

dependencies = [
    "langgraph>=0.6.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sage_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
